[gd_scene load_steps=5 format=3 uid="uid://cf27r8vjqk6av"]

[ext_resource type="Script" path="res://Player/Upgrades/player_upgrade_button.gd" id="1_k3qr4"]
[ext_resource type="Texture2D" uid="uid://c4mwjq8jwfkrt" path="res://Player/Upgrades/Meta/Lucky Dice.png" id="3_7mng6"]
[ext_resource type="Texture2D" uid="uid://bnu7ashmt28b4" path="res://Player/Upgrades/Player Upgrade Button.png" id="3_oop5q"]

[sub_resource type="LabelSettings" id="LabelSettings_mevve"]

[node name="PlayerUpgradeButton" type="TextureButton"]
custom_minimum_size = Vector2(80, 80)
offset_right = 80.0
offset_bottom = 80.0
focus_mode = 0
disabled = true
stretch_mode = 3
script = ExtResource("1_k3qr4")

[node name="HexSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(38, 40)
texture = ExtResource("3_oop5q")

[node name="IconSprite" type="Sprite2D" parent="HexSprite"]
modulate = Color(1, 1, 1, 0.5)
texture = ExtResource("3_7mng6")

[node name="CounterLabel" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 52.0
offset_top = 63.0
offset_right = 92.0
offset_bottom = 86.0
label_settings = SubResource("LabelSettings_mevve")
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
